--- a/frontend/index.css
+++ b/frontend/index.css
@@ -4,7 +4,11 @@
 @tailwind components;
 @tailwind utilities;
 
-
+*{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
 body {
     font-family: 'Poppins', sans-serif;
   }
